<resources>
    <string name="app_name">UnitTest</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="login">登录</string>
    <string name="login_mobile">手机号</string>
    <string name="login_mobile_hint">请输入您的手机号</string>
    <string name="login_identify">验证码</string>
    <string name="login_identify_hint">请输入您的验证码</string>
    <string name="login_mobile_login">手机登录</string>
    <string name="login_send_identify">发送验证码</string>

</resources>
