<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="middle|end|beginning">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_height"
            android:paddingStart="@dimen/activity_left_padding"
            android:paddingLeft="@dimen/activity_left_padding"
            android:paddingEnd="@dimen/activity_right_padding"
            android:paddingRight="@dimen/activity_right_padding">

            <TextView
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/login_mobile"
                android:textColor="@color/text_default"
                android:textSize="@dimen/textSize_16sp"/>

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_mobile_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="@dimen/textSize_16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_height"
            android:paddingLeft="@dimen/activity_left_padding"
            android:paddingRight="@dimen/activity_right_padding">

            <TextView
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/login_identify"
                android:textColor="@color/text_default"
                android:textSize="@dimen/textSize_16sp"/>

            <EditText
                android:id="@+id/et_identify"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_identify_hint"
                android:inputType="number"
                android:textSize="@dimen/textSize_16sp"/>

            <TextView
                android:id="@+id/tv_send_identify"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="right|end|center_vertical"
                android:text="@string/login_send_identify"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textSize_14sp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_18sp"/>

</LinearLayout>

